@startuml

hide circle
hide empty members


class ValueObject
class DateValue
class DriversChampionships
class Link
class NormalizedDate
class SeasonRef


ValueObject <|-- DateValue
ValueObject <|-- DriversChampionships
ValueObject <|-- Link
ValueObject <|-- NormalizedDate
ValueObject <|-- SeasonRef


@enduml
